@@ -1,29 +1,33 @@
 language: python
 
 python:
-    - pypy
+  - pypy
+
+branches:
+  only:
+      - master
 
 env:
-    - PORTAGE_VERSION="2.2.20"
+  - PV="2.2.20"
 
 before_script:
-    - mkdir travis-overlay
-    - mv !(travis-overlay) travis-overlay/
-    - mv .git travis-overlay/
-    - wget "https://github.com/gentoo/portage/archive/v${PORTAGE_VER}.tar.gz" -O portage-${PORTAGE_VER}.tar.gz
-    - wget "https://github.com/gentoo/gentoo-portage-rsync-mirror/archive/master.tar.gz" -O portage-tree.tar.gz
-    - wget "https://raw.githubusercontent.com/mrueg/repoman-travis/master/spinner.sh"
-    - sudo chmod a+rwX /etc/passwd /etc/group /etc /usr spinner.sh
-    - chmod a+rwx spinner.sh
-    - echo "portage:x:250:250:portage:/var/tmp/portage:/bin/false" >> /etc/passwd
-    - echo "portage::250:portage,travis" >> /etc/group
-    - mkdir -p /etc/portage/ /usr/portage/distfiles
-    - tar xzf portage-${PORTAGE_VER}.tar.gz
-    - tar xzf portage-tree.tar.gz -C /usr/portage --strip-components=1
-    - cp portage-${PORTAGE_VER}/cnf/repos.conf /etc/portage/
-    - ln -s /usr/portage/profiles/base/ /etc/portage/make.profile
-    - wget "http://www.gentoo.org/dtd/metadata.dtd" -O /usr/portage/distfiles/metadata.dtd
-    - cd travis-overlay
+  - mkdir travis-overlay
+  - mv !(travis-overlay) travis-overlay/
+  - mv .git travis-overlay/
+  - wget "https://github.com/gentoo/portage/archive/v${PV}.tar.gz" -O portage-${PV}.tar.gz
+  - wget "https://github.com/gentoo/gentoo-portage-rsync-mirror/archive/master.tar.gz" -O portage-tree.tar.gz
+  - wget "https://raw.githubusercontent.com/mrueg/repoman-travis/master/spinner.sh"
+  - sudo chmod a+rwX /etc/passwd /etc/group /etc /usr spinner.sh
+  - chmod a+rwx spinner.sh
+  - echo "portage:x:250:250:portage:/var/tmp/portage:/bin/false" >> /etc/passwd
+  - echo "portage::250:portage,travis" >> /etc/group
+  - mkdir -p /etc/portage/ /usr/portage/distfiles
+  - tar xzf portage-${PV}.tar.gz
+  - tar xzf portage-tree.tar.gz -C /usr/portage --strip-components=1
+  - cp portage-${PV}/cnf/repos.conf /etc/portage/
+  - ln -s /usr/portage/profiles/base/ /etc/portage/make.profile
+  - wget "http://www.gentoo.org/dtd/metadata.dtd" -O /usr/portage/distfiles/metadata.dtd
+  - cd travis-overlay
 
 script:
-    - ./../spinner.sh "./../portage-${PORTAGE_VER}/bin/repoman full -d"
+  - ./../spinner.sh "./../portage-${PV}/bin/repoman full -d"
