@@ -2,6 +2,9 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  19 May 2015; Guilherme Amadio <amadio@gentoo.org> hepmc-9999.ebuild:
+  sci-physics/hepmc: use master branch as default
+
 *hepmc-9999 (10 Apr 2015)
 
   10 Apr 2015; Guilherme Amadio <amadio@gentoo.org> +hepmc-9999.ebuild,
